--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "target": "ES2020",
     "module": "CommonJS",
     "outDir": "functions",
-    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["api", "src"], 
+  "exclude": ["functions", "node_modules"]
 }
