--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@vercel/node": "^5.1.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
