--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@netlify/functions": "^3.0.4",
     "@netlify/node-cookies": "^0.1.0",
     "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "googleapis": "^148.0.0",
     "netlify": "^13.3.4",
